--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/core": "^10.0.28",
     "@material-ui/core": "^4.9.10",
     "@material-ui/lab": "^4.0.0-alpha.49",
+    "@nivo/bar": "^0.61.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
